# projet_appr_auto

./: .gitignore  PROJECT_REPORT.md  Porjet_soudure.ipynb  README.md  clustering.ipynb  clusters_analysis.ipynb  convert_to_pdf.py  preprocessing.ipynb  pyproject.toml  regression.ipynb
PCA_tests/: Porjet_soudure.ipynb  data_analyse.ipynb
experimentation/: PCA.ipynb  Porjet_soudure.ipynb  Projet_soudure.ipynb
src/: open_data.py
