[project]
name = "soudures"
version = "0.1.0"
description = ""
authors = [
    {name = "Hugues d'Hardemare",email = "hugues.du-moulinet-dhardemare@student-cs.fr"}
]
readme = "README.md"
requires-python = ">=3.13"
packages = []
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "ipykernel (>=7.0.1,<8.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "scipy (>=1.16.2,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
